--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  csc_picker: ^0.2.7
+  provider: ^6.0.3
+  table_calendar: ^3.1.1
+
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +70,9 @@ flutter:
       - assets/splashscreenimage/amico 3.jpg
       - assets/splashscreenimage/amico 4.jpg
       - assets/splashscreenimage/amico 5.jpg
+      - assets/buses/buss1.png
+      - assets/buses/bus2.png
+      - assets/buses/bus3.png
 
 
   #   - images/a_dot_ham.jpeg
